--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.1",
+    "brain.js": "^2.0.0-alpha.12",
     "jest": "^24.9.0",
     "node-fetch": "^2.6.0",
     "request": "^2.88.0"
