--- a/JS4/testDemo/package.json
+++ b/JS4/testDemo/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "testdemo",
+  "name": "testDemo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "jest": "^25.1.0"
-  }
+  "license": "ISC"
 }
