--- a/JS4/MachineLearning/package.json
+++ b/JS4/MachineLearning/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "lessonDocs",
+  "name": "machinelearning",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "brain.js": "^2.0.0-alpha.12",
-    "jest": "^24.9.0",
-    "node-fetch": "^2.6.0",
-    "request": "^2.88.2",
-    "xlsx": "^0.15.6"
+    "brain.js": "^2.0.0-alpha.12"
   }
 }
