--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^24.9.0",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "request": "^2.88.2",
     "uuid": "^8.0.0",
+    "uuidv4": "^6.0.8",
     "xlsx": "^0.15.6"
   }
 }
