--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "brain.js": "^2.0.0-alpha.12",
     "cors": "^2.8.5",
+    "cypress": "^4.6.0",
     "express": "^4.17.1",
     "jest": "^24.9.0",
     "multer": "^1.4.2",
